# N1CTF-pwn1OS

./: README.md  inject.py
Release/带 flag 的文件/pwn1OS.app/: pwn1OS
Release/带 flag 的文件/pwn1OS.app/_CodeSignature/: CodeResources
exp/: pwn.html  pwn.js
pwn1OS/pwn1OS.xcodeproj/project.xcworkspace/xcuserdata/momo.xcuserdatad/: UserInterfaceState.xcuserstate
pwn1OS_server/: Cargo.toml  log4rs.yaml
pwn1OS_server/src/: main.rs
wp/: N1CTF 2023 pwn1OS writeup.md
